packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_with_tagname.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 472
expression: output
---
==INPUT==


import { $, component$ } from '@khulnasoft.com/qwik';

export const Foo = component$(() => {
    return $(() => {
        return (
            <div>
            </div>
        )
    });
}, {
    tagName: "my-foo",
});

============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/qwik";
export const Foo_component_HTDRsvUbLiE = ()=>{
    return /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_1_DvU6FitWglY"), "Foo_component_1_DvU6FitWglY");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";yCAG8B;IAC1B;AAMJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    83,
    185
  ]
}
*/
============================= test.tsx_Foo_component_1_DvU6FitWglY.tsx (ENTRY POINT)==

export const Foo_component_1_DvU6FitWglY = ()=>{
    return <div>
            </div>;
};
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"2CAIa;IACL,QACK,IAAI;YACL,EAAE;AAEV\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_DvU6FitWglY",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "DvU6FitWglY",
  "canonicalFilename": "test.tsx_Foo_component_1_DvU6FitWglY",
  "path": "",
  "extension": "tsx",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    104,
    181
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "Foo_component_HTDRsvUbLiE"), {
    tagName: "my-foo"
});


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,iHAOhB;IACC,SAAS;AACb,GAAG\"}")
== DIAGNOSTICS ==

[]
