packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__issue_5008.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 3447
expression: output
---
==INPUT==


        import { component$, useStore } from "@khulnasoft.com/qwik";

        export default component$(() => {
        const store = useStore([{ value: 0 }]);
        return (
            <>
            <button onClick$={() => store[0].value++}>+1</button>
            {store.map(function (v, idx) {
                return <div key={"fn_" + idx}>Function: {v.value}</div>;
            })}
            {store.map((v, idx) => (
                <div key={"arrow_" + idx}>Arrow: {v.value}</div>
            ))}
            </>
        );
        });
        
============================= test.js ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGQ,6BAAe,mHAaZ\"}")
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@khulnasoft.com/qwik/jsx-runtime";
import { _jsxC } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
import { _wrapSignal } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
import { useStore } from "@khulnasoft.com/qwik";
export const test_component_LUXeXe0DQrg = ()=>{
    const store = useStore([
        {
            value: 0
        }
    ]);
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("button", null, {
                onClick$: /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_Fragment_button_onClick_eF3QEzgQWcY"), "test_component_Fragment_button_onClick_eF3QEzgQWcY", [
                    store
                ])
            }, "+1", 3, null),
            store.map(function(v, idx) {
                return /*#__PURE__*/ _jsxQ("div", null, null, [
                    "Function: ",
                    _wrapSignal(v, "value")
                ], 1, "fn_" + idx);
            }),
            store.map((v, idx)=>/*#__PURE__*/ _jsxQ("div", null, null, [
                    "Arrow: ",
                    _wrapSignal(v, "value")
                ], 1, "arrow_" + idx))
        ]
    }, 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;0CAGkC;IAC1B,MAAM,QAAQ,SAAS;QAAC;YAAE,OAAO;QAAE;KAAE;IACrC,qBACI;;0BACA,MAAC;gBAAO,QAAQ;;;eAA0B;YACzC,MAAM,GAAG,CAAC,SAAU,CAAC,EAAE,GAAG;gBACvB,qBAAO,MAAC;oBAAsB;gCAAW;sBAAxB,QAAQ;YAC7B;YACC,MAAM,GAAG,CAAC,CAAC,GAAG,oBACX,MAAC;oBAAyB;gCAAQ;sBAAxB,WAAW;;;AAI7B\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    106,
    546
  ]
}
*/
============================= test.tsx_test_component_Fragment_button_onClick_eF3QEzgQWcY.js (ENTRY POINT)==

import { useLexicalScope } from "@khulnasoft.com/qwik";
export const test_component_Fragment_button_onClick_eF3QEzgQWcY = ()=>{
    const [store] = useLexicalScope();
    return store[0].value++;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";kEAO8B;;WAAM,KAAK,CAAC,EAAE,CAAC,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_Fragment_button_onClick_eF3QEzgQWcY",
  "entry": null,
  "displayName": "test.tsx_test_component_Fragment_button_onClick",
  "hash": "eF3QEzgQWcY",
  "canonicalFilename": "test.tsx_test_component_Fragment_button_onClick_eF3QEzgQWcY",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    224,
    246
  ]
}
*/
== DIAGNOSTICS ==

[]
